Add Airflow & AWS codedeploy
docker compose (airflow)

--- a/yolov5/templates/home.html
+++ b/yolov5/templates/home.html
@@ -9,10 +9,8 @@
     <center><h3>anus image</h3>
     <img src="{{ url_for('static', filename='images/' + image) }}" width="320" height="320">
     <form method='post'>
-    <input type="submit" name="submit_button" value="Quality: O | Problem: O">
-    <input type="submit" name="submit_button" value="Quality: O | Problem: X">
-    <input type="submit" name="submit_button" value="Quality: X | Problem: O">
-    <input type="submit" name="submit_button" value="Quality: X | Problem: X">
+    <input type="submit" name="submit_button" value="Quality: O">
+    <input type="submit" name="submit_button" value="Quality: X">
     <input type="submit" name="submit_button" value="Delete">
     </form>  
     </center>
